[merge] merged in RESTXQ (was Project Sleepy)
svn path=/trunk/eXist/; revision=16951